# BAaP

./: .gitignore  CMakeCache.txt
LR1/: Task_3  Task_3.cpp  Отличия основных характеристик ЯП.docx
LR1/Task_3.dSYM/Contents/Resources/DWARF/: Task_3
LR2/Task_1/: Task_1.cpp  main
LR2/Task_1/Task_1.dSYM/Contents/Resources/DWARF/: Task_1
LR2/Task_1/main.dSYM/Contents/Resources/DWARF/: main
LR2/Task_10/main.dSYM/Contents/Resources/DWARF/: main
LR2/Task_11/: Task_11.cpp  main
LR2/Task_11/main.dSYM/Contents/Resources/DWARF/: main
LR2/Task_12/: Task_12.cpp  main
LR2/Task_12/main.dSYM/Contents/Resources/DWARF/: main
LR2/Task_2/: Task_2
LR2/Task_4/: Task_4.cpp  main
LR2/Task_5/: Task_5.cpp  main
LR2/Task_5/main.dSYM/Contents/Resources/DWARF/: main
LR2/Task_6/: Task_6.cpp  main  task1
LR2/Task_6/main.dSYM/Contents/Resources/DWARF/: main
LR2/Task_6/mian.dSYM/Contents/Resources/DWARF/: mian
LR2/Task_7/: Task_7.cpp
LR2/Task_8/: Task_8.cpp  main  tsan.txt  usan.txt
LR2/Task_8/main.dSYM/Contents/Resources/DWARF/: main
LR2/Task_9/: Task_9.cpp  main
LR2/Task_9/main.dSYM/Contents/Resources/DWARF/: main
LR3/Task_1/: main
LR3/Task_1/main.dSYM/Contents/Resources/DWARF/: main
LR3/Task_2/: Task_2.cpp
LR3/Task_2/main.dSYM/Contents/Resources/DWARF/: main
LR3/Task_3/: Task_3.cpp  main
LR3/Task_3/main.dSYM/Contents/Resources/DWARF/: main
LR3/Task_4/: Task_4.cpp  main
LR3/Task_4/main.dSYM/Contents/Resources/DWARF/: main
LR3/Task_5/: Task_5.cpp  main
LR3/Task_5/main.dSYM/Contents/Resources/DWARF/: main
LR3/Task_6/: Task_6.cpp  main
LR3/Task_7/: Task_7.cpp  main
LR3/Task_8/: Task_8.cpp  main
LR4/: CMakeLists.txt
LR4/LabWork4_PartC/Task_4/: Task_4.c  Task_4.cpp  max_diag.c  max_diag.h
LR4/LabWork4_PartC/Task_5/: Task_5.c  num_mine.c
LR4/LabWork4_PartC/Task_6/: Task_6.c  magic_square.c  magic_square.h
LR4/Task_1/: Task_1.cpp  dubelems.h  main
LR4/Task_1/main.dSYM/Contents/Resources/DWARF/: main
LR4/Task_2/: Task_2.cpp
LR4/Task_2/main.dSYM/Contents/Resources/DWARF/: main
LR4/Task_3/: Task_3.cpp  get_sum_odd.cpp  main
LR5/Task_1/: Task_1.cpp  run_task1_tests  sum_sol.cpp  task1_tests
LR5/Task_2/: Task_2  check_sin.cpp  check_sin.h  gtest2.cpp  libchecksin.dylib  task2_tests
LR5/Task_3/: Task_3  Task_3.cpp  Task_3x  result_sum_arr.h  task3_tests
LR5/Task_3/Task_3x.dSYM/Contents/: Info.plist
LR5/Task_4/: Task_4  Task_4.cpp  gtest4.cpp  run_task1_tests  search_switch.cpp  task4_tests
LR5/Task_5/: Task_5  Task_5.cpp  arr_average.cpp  arr_average.h  gtest5.cpp
LR6/: CMakeLists.txt
LR6/Task_1/: Task_1.cpp  find.cpp  gtest1.cpp
LR6/Task_2/: Task_2.cpp
LR6/Task_3/: Task_3.cpp  gtest3.cpp  res.cpp
LR7/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task5.cpp
LR7/include/: tools.cpp  tools.h
LR8/: CmakeLists.txt
LR8/Task_1/: customer.cpp  customer.h  main.cpp
LR8/Task_2/: InfCalls.txt  data.cpp  data.h
sem1/LR1/: Task_3.cpp  a.out
sem1/LR2/Task_1/: Task_1  main
sem1/LR2/Task_10/: Task_10.cpp  main
sem1/LR2/Task_11/: Task_11.cpp  main
sem1/LR2/Task_2/: Task_2.cpp  main
sem1/LR2/Task_3/: Task_3.cpp  main
sem1/LR2/Task_6/: Task_6.cpp  mian
sem1/LR2/Task_7/: main
sem1/LR2/Task_8/: Isan.txt  asan.txt  main
sem1/LR3/Task_1/: Task_1.cpp  main
sem1/LR3/Task_2/: main
sem1/LR3/Task_3/: Task_3.cpp
sem1/LR3/Task_5/: Task_5.cpp  main
sem1/LR3/Task_6/: Task_6.cpp
sem1/LR3/Task_7/: main
sem1/LR4/LabWork4_PartC/Task_4/: main
sem1/LR4/LabWork4_PartC/Task_5/: num_mine.h
sem1/LR4/Task_1/: Task_1.cpp  dubelems.cpp
sem1/LR4/Task_2/: main  sumodd.cpp  sumodd.h
sem1/LR4/Task_3/: get_sum_odd.h
sem1/LR4/git/: COMMIT_EDITMSG  ORIG_HEAD  config  index
sem1/LR4/git/logs/: HEAD
sem1/LR4/git/refs/heads/: main
sem1/LR4/gtests/: gtests.cpp
sem1/LR5/Task_1/: Task_1  Task_1.cpp  gtest1.cpp  main  sum_sol.h
sem1/LR5/Task_2/: Task_2.cpp  check_sin.cpp
sem1/LR5/Task_3/: gtest3.cpp  result_sum_arr.cpp
sem1/LR5/Task_4/: Task_4  search_switch.h
sem1/LR5/Task_5/: task5_tests
sem1/LR6/Task_1/: find.h
sem1/LR6/Task_2/: gtest2.cpp  receipt_calc.cpp  receipt_calc.h
sem1/LR6/Task_3/: Task_3.cpp  res.cpp  res.h
sem1/LR7/: CMakeLists.txt  task2.cpp  task3.cpp  task4.cpp
sem1/LR8/Task_1/: customer.cpp  customers.txt
sem1/LR8/Task_2/: InfCalls.txt  main.cpp
sem2/LR1/lab1k2/: CMakeLists.txt  canvas.cpp  canvas.h  circle.cpp  circle.h  eightstar.cpp  eightstar.h  main.cpp  mainwindow.cpp  mainwindow.h  rectangle.cpp  rectangle.h  resources.qrc  rhomb.cpp  rhomb.h  shape.cpp  shape.h  sixcorner.cpp  sixcorner.h  sixstar.cpp  sixstar.h  square.cpp  square.h  star.cpp  star.h  trapez.cpp  trapez.h  triangle.cpp  triangle.h
sem2/LR1/lab1k2/git/: index
sem2/LR1/task1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  movingcircle.cpp  movingcircle.h  wheel.cpp  wheel.h
sem2/LR2/task1/DateApp/: CMakeLists.txt  date.cpp  date.h  datestorage.cpp  datestorage.h  datetests.cpp  datetests.h  mainwindow.cpp  mainwindow.h
sem2/LR2/task2/ShopApp/: CMakeLists.txt  agevalidator.cpp  agevalidator.h  mainwindow.cpp  mainwindow.h  product.h  productfile.cpp  productfile.h
sem2/LR2/task3/: main  main.cpp
sem2/LR2/task3/headers/: binaryOperation.h  expression.h  number.h
sem2/LR2/task4/: main  main.cpp
sem2/LR3/: CMakeLists.txt
sem2/LR3/task1/: main.cpp
sem2/LR3/task2/: main.cpp
sem2/LR3/task3/: main.cpp
sem2/LR3/task4/: main.cpp
sem2/LR4/: CMakeLists.txt
sem2/LR4/task1/binsearch/: main.cpp
sem2/LR4/task1/heap/: main.cpp
sem2/LR4/task1/merge/: main.cpp
sem2/LR4/task1/quick/: main.cpp
sem2/LR4/task2/binpow/: main.cpp
sem2/LR4/task2/interpol/: main.cpp
sem2/LR4/task3/: main.cpp
sem2/LR5/Task_2/: CMakeLists.txt  dialog.cpp  dialog.h  mainwindow.cpp  mainwindow.h
sem2/LR5/Task_2/include/: iterator.h  mystring.h  reverseiterator.h
sem2/LR5/Task_2/src/: mystring.cpp
sem2/LR5/Task_3/: CMakeLists.txt  dialog.h  main.cpp  mainwindow.cpp  mainwindow.h
sem2/LR5/Task_3/include/: bitset.h  string.h
sem2/LR5/Task_3/src/: string.cpp
(+21 files in other folders)
