cmake_minimum_required(VERSION 3.10)
project(LR4)

set(CMAKE_CXX_STANDARD 11)

# Для Task_1
add_executable(Task_1 Task_1/Task_1.cpp)

# Для Task_2
add_executable(Task_2 Task_2/Task_2.cpp)

# Для Task_3
add_executable(Task_3 Task_3/Task_3.cpp)

# Для Task_4
add_executable(Task_4 LabWork4_PartC/Task_4/Task_4.cpp)

# Для Task_5
add_executable(Task_5 LabWork4_PartC/Task_5/Task_5.cpp)

# Для Task_6
add_executable(Task_6 LabWork4_PartC/Task_6/Task_6.cpp)